--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -7,8 +7,10 @@ save-position-on-quit=yes
 # local cache and stream cache
 cache=yes
 cache-secs=30
-demuxer-thread=yes
+cache-pause-wait=5
+
 # 10MB: 10485760 - 20MB: 20971520
+demuxer-thread=yes
 demuxer-max-bytes=10485760
 demuxer-readahead-secs=30
 demuxer-mkv-subtitle-preroll=yes
