--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,7 @@
 # Tweaks
+autofit=85%
 keep-open=yes
+fullscreen=yes
 cursor-autohide=500
 resume-playback=yes
 save-position-on-quit=yes
@@ -33,7 +35,7 @@ osd-shadow-color="#EE000000"
 osd-spacing=0.5
 
 # subtitle
-sub-pos=95
+sub-pos=90
 sub-font=""
 sub-font-size=32
 sub-color="#FFFFFFFF"
