--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -8,13 +8,13 @@ save-position-on-quit=yes
 
 # local cache and stream cache
 cache=yes
-cache-secs=30
+cache-secs=59
 cache-pause-wait=5
 
 # 10MB: 10485760 - 20MB: 20971520
 demuxer-thread=yes
 demuxer-max-bytes=10485760
-demuxer-readahead-secs=30
+demuxer-readahead-secs=59
 demuxer-mkv-subtitle-preroll=yes
 
 # volume
@@ -62,7 +62,8 @@ screenshot-jpeg-quality=100
 screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
 
 # YouTube DL
-ytdl-format=bestvideo[height<=?720][vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best
+# ytdl-format=bestvideo[height<=?720][vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best[height<=?720]
+ytdl-format=bestvideo[height<=?480][vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best[height<=?480]
 ytdl-raw-options=all-subs=
 
 [hd]
