--- a/mpv/.config/mpv/script-opts/osc.conf
+++ b/mpv/.config/mpv/script-opts/osc.conf
@@ -4,7 +4,6 @@ layout=slimbox
 # Sets the style of the playback position marker and overall shape of the seekbar: bar, diamond or knob
 seekbarstyle=bar
 
-
 seekbarhandlesize=0.6
 seekbarkeyframes=yes
 seekrangestyle=inverted
@@ -18,7 +17,7 @@ scalewindowed=1.0
 scalefullscreen=1.0
 scaleforcedwindow=2.0
 vidscale=yes
-#valign=0.8
+# valign=0.8
 valign=-1
 halign=0.0
 barmargin=0
@@ -32,6 +31,6 @@ timems=no
 visibility=auto
 boxmaxchars=80
 boxvideo=no
-windowcontrols=auto
-windowcontrols_alignment=right
-greenandgrumpy=yes
+# windowcontrols=auto
+# windowcontrols_alignment=right
+# greenandgrumpy=yes
