--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory         "~/Music/Playing"
+music_directory         "~/Music"
 playlist_directory      "~/.local/share/mpd/playlists"
 db_file                 "~/.local/share/mpd/database"
 log_file                "~/.local/share/mpd/mpd.log"
