--- a/polybar/.config/polybar/modules/menu-power.ini
+++ b/polybar/.config/polybar/modules/menu-power.ini
@@ -8,23 +8,27 @@ expand-right = false
 
 ; "menu-LEVEL-N" has the same properties as "label-NAME" with
 ; the additional "exec" property
-;
+
 ; Available exec commands:
 ;   menu-open-LEVEL
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
 
-menu-0-0 = "log off"
-menu-0-0-exec = bspc quit
+menu-0-0 = "reload"
+menu-0-0-exec = bspc wm -r
 menu-0-0-margin = ${vars.margin}
 
-menu-0-1 = "restart"
-menu-0-1-exec = systemctl reboot
+menu-0-1 = "log off"
+menu-0-1-exec = bspc quit
 menu-0-1-margin = ${vars.margin}
 
-menu-0-2 = "shutdown"
-menu-0-2-exec = systemctl poweroff
+menu-0-2 = "restart"
+menu-0-2-exec = systemctl reboot
 menu-0-2-margin = ${vars.margin}
+
+menu-0-3 = "shutdown"
+menu-0-3-exec = systemctl poweroff
+menu-0-3-margin = ${vars.margin}
 
 ; Available tags:
 ;   <label-toggle> (default) - gets replaced with <label-(open|close)>
@@ -46,4 +50,4 @@ label-close = " "
 
 ; Optional item separator
 ; Default: none
-label-separator =
+;label-separator =
