--- a/polybar/.config/polybar/modules/cpu.ini
+++ b/polybar/.config/polybar/modules/cpu.ini
@@ -2,7 +2,8 @@
 type = internal/cpu
 interval = 1
 
-format = <label>
-format-margin = ${vars.margin}
-
 label = %percentage%%
+
+format = %{A1:$HOME/.scripts/bspwm-launch-application.sh 'xfce4-taskmanager' 'Task Manager':}<label>%{A}
+format-prefix = ${variables.format-right-prefix}
+format-suffix = ${variables.format-right-suffix}
