--- a/polybar/.config/polybar/modules/date.ini
+++ b/polybar/.config/polybar/modules/date.ini
@@ -3,11 +3,12 @@
 type = internal/date
 interval = 1.0
 
+date = "%B %d %Y, "
+time = "%H:%M:%S "
+
+label = %date%%time%
+
 format = <label>
-format-foreground = #eeffffff
-
-label = %date%, %time%
-label-margin = ${vars.margin}
-
-date = %B %d %Y
-time = %H:%M:%S
+format-prefix = ${variables.format-right-prefix}
+format-suffix = ${variables.format-right-suffix}
+format-foreground = #EEFFFFFF
