--- a/polybar/.config/polybar/modules/memory.ini
+++ b/polybar/.config/polybar/modules/memory.ini
@@ -2,7 +2,8 @@
 type = internal/memory
 interval = 1
 
-format = <label>
-format-margin = ${vars.margin}
-
 label = %percentage_used%%  %percentage_swap_used%%
+
+format = <label>
+format-prefix = ${variables.format-right-prefix}
+format-suffix = ${variables.format-right-suffix}
