--- a/polybar/.config/polybar/modules/menu-power.ini
+++ b/polybar/.config/polybar/modules/menu-power.ini
@@ -1,5 +1,4 @@
 [module/menu-power]
-
 type = custom/menu
 
 ; If true, <label-toggle> will be to the left of the menu items (default).
@@ -14,21 +13,17 @@ expand-right = false
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
 
-menu-0-0 = "reload"
-menu-0-0-exec = bspc wm -r
-menu-0-0-margin = ${vars.margin}
+menu-0-0 = "log off"
+menu-0-0-exec = bspc quit
+menu-0-0-margin = ${variables.menu-margin}
 
-menu-0-1 = "log off"
-menu-0-1-exec = bspc quit
-menu-0-1-margin = ${vars.margin}
+menu-0-1 = "restart"
+menu-0-1-exec = systemctl reboot
+menu-0-1-margin = ${variables.menu-margin}
 
-menu-0-2 = "restart"
-menu-0-2-exec = systemctl reboot
-menu-0-2-margin = ${vars.margin}
-
-menu-0-3 = "shutdown"
-menu-0-3-exec = systemctl poweroff
-menu-0-3-margin = ${vars.margin}
+menu-0-2 = "shutdown"
+menu-0-2-exec = systemctl poweroff
+menu-0-2-margin = ${variables.menu-margin}
 
 ; Available tags:
 ;   <label-toggle> (default) - gets replaced with <label-(open|close)>
@@ -38,7 +33,6 @@ menu-0-3-margin = ${vars.margin}
 ;format = <label-toggle>
 
 label-open = " "
-
 label-close = " "
 
 ;label-close = ""
