--- a/polybar/.config/polybar/modules/network-traffic.ini
+++ b/polybar/.config/polybar/modules/network-traffic.ini
@@ -1,11 +1,23 @@
 [module/network-traffic]
 type = custom/script
-exec = ~/.config/polybar/modules/scripts/network-traffic.sh
-tail = true
-
-format = <label>
-format-suffix = ${variables.network-traffic-format-suffix}
-format-suffix-margin-left = ${variables.network-traffic-format-suffix-margin-left}
-format-margin = ${variables.wireless-network-format-margin}
+exec = cat /tmp/network-traffic
+tail = false
+interval = 1
 
 label = %output%
+
+format = "<label>  -"
+format-prefix = ${variables.format-right-prefix}
+format-suffix = ${variables.format-right-suffix}
+
+# [module/network-traffic]
+# type = custom/script
+# exec = ~/.config/polybar/modules/scripts/network-traffic.sh
+# tail = true
+
+# format = <label>
+# format-suffix = ${variables.network-traffic-format-suffix}
+# format-suffix-margin-left = ${variables.network-traffic-format-suffix-margin-left}
+# format-margin = ${variables.wireless-network-format-margin}
+
+# label = %output%
