--- a/polybar/.config/polybar/modules/pulseaudio.ini
+++ b/polybar/.config/polybar/modules/pulseaudio.ini
@@ -15,14 +15,16 @@ use-ui-max = false
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <label-volume>
-format-volume-margin = ${vars.margin}
+format-volume-prefix = ${variables.format-right-prefix}
+format-volume-suffix = ${variables.format-right-suffix}
 
 ; Available tags:
 ;   <label-muted> (default)
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-margin = ${vars.margin}
+format-muted-prefix = ${variables.format-right-prefix}
+format-muted-suffix = ${variables.format-right-suffix}
 format-muted-foreground = ${colors.red}
 
 label-volume = %percentage%%
