--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,7 +1,3 @@
-[vars]
-margin = 1
-padding = 2
-
 [colors]
 red = #ff0000
 
@@ -19,11 +15,16 @@ bar-border-bottom = #1f1f1f
 ; bar-border-bottom = #272c37
 
 [variables]
+menu-margin = 1
+
+format-right-prefix = ""
+format-right-suffix = ""
+
 bspwm-label-padding = 2
 mpd-icon-font = 2
 mpd-icon-padding = 0
-mpd-icon-margin-right = 1
-mpd-format-margin = 2
+mpd-icon-margin-right = 2
+mpd-format-margin = 3
 network-traffic-format-margin = 1
 network-traffic-format-suffix = -
 network-traffic-format-suffix-margin-left = 2
@@ -55,8 +56,8 @@ border-bottom-color = ${colors.bar-border-bottom}
 padding-right = 0
 module-margin = 0
 
-modules-left = bspwm separator refresh-playlist mpd mpc-zscroll
-modules-right = wireless-network network-traffic cpu temperature memory pulseaudio date menu-power
+modules-left = bspwm separator-bar refresh-playlist mpd mpc-zscroll
+modules-right = wireless-network separator network-traffic separator cpu separator temperature separator memory separator pulseaudio separator date menu-power
 
 tray-maxsize = 14
 tray-padding = 2
@@ -76,19 +77,14 @@ wm-restack = bspwm
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
 
-[module/network-traffic]
-type = custom/script
-exec = cat /tmp/network-traffic
-tail = false
-interval = 1
-
-label = %output%
-format = <label>
-
 
 [module/separator]
 type = custom/text
-content = │
+content = "  "
+
+[module/separator-bar]
+type = custom/text
+content = "│"
 content-margin = 2
 
 
@@ -106,4 +102,4 @@ include-file = ~/.config/polybar/modules/refresh-playlist.ini
 include-file = ~/.config/polybar/modules/wireless-network.ini
 include-file = ~/.config/polybar/modules/menu-power.ini
 include-file = ~/.config/polybar/modules/ip.ini
-; include-file = ~/.config/polybar/modules/network-traffic.ini
+include-file = ~/.config/polybar/modules/network-traffic.ini
