--- a/polybar/.config/polybar/modules/temperature.ini
+++ b/polybar/.config/polybar/modules/temperature.ini
@@ -14,12 +14,15 @@ hwmon-path = /sys/devices/LNXSYSTM:00/LNXSYBUS:00/PNP0A08:00/device:08/ATK0110:0
 base-temperature = 40
 warn-temperature = 75
 
+label = %temperature-c%
+
 format = <label>
-format-margin = ${vars.margin}
+format-prefix = ${variables.format-right-prefix}
+format-suffix = ${variables.format-right-suffix}
+
+label-warn = %temperature-c%
 
 format-warn = <label-warn>
-format-warn-margin = ${vars.margin}
+format-warn-prefix = ${variables.format-right-prefix}
+format-warn-suffix = ${variables.format-right-suffix}
 format-warn-foreground = ${colors.red}
-
-label = %temperature-c%
-label-warn = %temperature-c%
