--- a/compton/.config/compton/compton.conf
+++ b/compton/.config/compton/compton.conf
@@ -66,7 +66,9 @@ paint-on-overlay = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [
+	"class_g = 'Cairo-clock'"
+];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
@@ -96,7 +98,16 @@ wintypes:
 ##
 ##
 
+# "85:class_g = 'URxvt' && focused",
+# "85:class_g = 'URxvt' && !focused",
+
 opacity-rule = [
-  "90:class_g = 'URxvt' && focused",
-  "90:class_g = 'URxvt' && !focused"
+	"90:class_g = 'Polybar'",
+	"85:class_g = 'dmenu'",
+
+	"85:class_g = 'URxvt'",
+	"90:class_g = 'Sublime_text'",
+	"90:class_g = 'Thunar'",
+
+	"90:class_g = 'tabbed'"
 ];
