--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,8 +13,9 @@ set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Theme
-set -g @themepack 'powerline/default/gray'
+# set -g @themepack 'powerline/default/gray'
 
+set -g status off
 set-option -g status-position top
 
 # set the pane border colors
