--- a/compton/.config/compton/compton.conf
+++ b/compton/.config/compton/compton.conf
@@ -102,12 +102,12 @@ wintypes:
 # "85:class_g = 'URxvt' && !focused",
 
 opacity-rule = [
-	"90:class_g = 'Polybar'",
 	"85:class_g = 'dmenu'",
 
 	"85:class_g = 'URxvt'",
 	"90:class_g = 'Sublime_text'",
 	"90:class_g = 'Thunar'",
 
+	"90:class_g = 'java-lang-Thread'",
 	"90:class_g = 'tabbed'"
 ];
