--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -33,6 +33,7 @@ osd-border-color="#00000000"
 osd-shadow-offset=1
 osd-shadow-color="#EE000000"
 osd-spacing=0.5
+osd-level=3
 
 # subtitle
 sub-pos=90
