--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,7 +15,8 @@ set -g @plugin 'jimeh/tmux-themepack'
 # Theme
 # set -g @themepack 'powerline/default/gray'
 
-set -g status off
+set -g status on
+set-option -g repeat-time 0
 set-option -g status-position top
 
 # set the pane border colors
@@ -23,8 +24,6 @@ set-option -g status-position top
 # set -g pane-border-bg colour238
 # set -g pane-active-border-fg colour236
 # set -g pane-active-border-bg colour250
-
-
 
 
 
