--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -46,6 +46,7 @@ sub-shadow-offset=1
 sub-shadow-color="#EE000000"
 sub-spacing=0.5
 sub-delay=0
+sub-file-paths="--"
 
 sub-auto=fuzzy
 sub-fix-timing=no
