--- a/polybar/.config/polybar/modules/network-traffic.ini
+++ b/polybar/.config/polybar/modules/network-traffic.ini
@@ -1,7 +1,7 @@
 [module/network-traffic]
 type = custom/script
-exec = cat /tmp/network-traffic
-tail = false
+exec = network-traffic 'enp0s29f7u7'
+tail = true
 interval = 1
 
 label = %output%
@@ -9,15 +9,3 @@ label = %output%
 format = "<label>  -"
 format-prefix = ${variables.format-right-prefix}
 format-suffix = ${variables.format-right-suffix}
-
-# [module/network-traffic]
-# type = custom/script
-# exec = ~/.config/polybar/modules/scripts/network-traffic.sh
-# tail = true
-
-# format = <label>
-# format-suffix = ${variables.network-traffic-format-suffix}
-# format-suffix-margin-left = ${variables.network-traffic-format-suffix-margin-left}
-# format-margin = ${variables.wireless-network-format-margin}
-
-# label = %output%
