--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -15,7 +15,7 @@ restore_paused          "yes"
 metadata_to_use         "artist,album,title,track,date"
 volume_normalization    "yes"
 auto_update             "yes"
-# auto_update_depth       "3"
+auto_update_depth       "7"
 save_absolute_paths_in_playlists  "yes"
 
 
