--- a/polybar/.config/polybar/modules/wireless-network.ini
+++ b/polybar/.config/polybar/modules/wireless-network.ini
@@ -1,6 +1,6 @@
 [module/wireless-network]
 type = internal/network
-interface = wlxa0f3c10e5a99
+interface = wlp0s29f7u2
 
 ; Seconds to sleep between updates
 ; Default: 1
