--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,8 @@ set -g @plugin 'jimeh/tmux-themepack'
 # set -g @themepack 'powerline/default/gray'
 
 set -g status on
+set -g base-index 1
+setw -g pane-base-index 1
 set-option -g repeat-time 0
 set-option -g status-position top
 
@@ -24,8 +26,6 @@ set-option -g status-position top
 # set -g pane-border-bg colour238
 # set -g pane-active-border-fg colour236
 # set -g pane-active-border-bg colour250
-
-
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
