--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,27 +5,18 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# Theme
-# set -g @themepack 'powerline/default/gray'
-
 set -g status on
 set -g base-index 1
 setw -g pane-base-index 1
 set-option -g repeat-time 0
 set-option -g status-position top
-
-# set the pane border colors
-# set -g pane-border-fg colour235
-# set -g pane-border-bg colour238
-# set -g pane-active-border-fg colour236
-# set -g pane-active-border-bg colour250
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
