--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -43,6 +43,12 @@ wireless-network-format-suffix-margin-left = 2
 [bar/top]
 bottom = false
 
+; font-0 = Hack Nerd Font Mono:size=8;2
+; font-1 = Hack Nerd Font Mono:weight=bold:size=10;2
+; font-1 = Material\-Design\-Iconic\-Font:style=Design\-Iconic\-Font:size=8;2
+; font-2 = siji:weight=bold:size=8;2
+; font-3 = Font Awesome 5 Free Solid:size=7;2
+
 font-0 = Sans:size=8;2
 font-1 = Material\-Design\-Iconic\-Font:style=Design\-Iconic\-Font:size=8;2
 font-2 = siji:weight=bold:size=8;2
