--- a/polybar/.config/polybar/modules/bspwm.ini
+++ b/polybar/.config/polybar/modules/bspwm.ini
@@ -23,6 +23,13 @@ ws-icon-3 = 3;
 ws-icon-4 = 4;
 ws-icon-default = 
 
+; ws-icon-0 = 0
+; ws-icon-1 = 1;%{T2}ﮊ%{T-}
+; ws-icon-2 = 2;%{T2}%{T-}
+; ws-icon-3 = 3;%{T2}%{T-}
+; ws-icon-4 = 4;%{T2}%{T-}
+; ws-icon-default = %{T2}%{T-}
+
 ; Available tags:
 ;   <label-monitor>
 ;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
