--- a/aria2/etc/aria2.conf
+++ b/aria2/etc/aria2.conf
@@ -6,10 +6,11 @@ log-level=notice
 # none, prealloc (default), falloc
 file-allocation=none
 
-split=1024
-min-split-size=1M
-max-concurrent-downloads=64
 max-connection-per-server=16
+max-concurrent-downloads=4
+lowest-speed-limit=10K
+min-split-size=1M
+split=1024
 
 remote-time=true
 always-resume=false
