--- a/polybar/.config/polybar/modules/bspwm.ini
+++ b/polybar/.config/polybar/modules/bspwm.ini
@@ -79,6 +79,7 @@ label-occupied-foreground = ${colors.foreground-unfocused}
 ;   %index%
 ; Default: %icon%  %name%
 label-urgent = %icon%
+label-urgent-padding = ${variables.bspwm-label-padding}
 label-urgent-foreground = #000000
 label-urgent-background = #bd2c40
 label-urgent-underline = #9b0a20
