--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -24,7 +24,7 @@ SyncFirst    = manjaro-system archlinux-keyring manjaro-keyring
 #UseDelta    = 0.7
 Architecture = auto
 
-IgnorePkg   = gimp
+IgnorePkg   = firefox gimp megasync
 #IgnorePkg   =
 #IgnoreGroup =
 
