--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -25,8 +25,8 @@ bar-border-bottom = #1f1f1f
 [variables]
 menu-margin = 1
 
-format-right-prefix = ""
-format-right-suffix = ""
+format-right-prefix =
+format-right-suffix =
 
 bspwm-label-padding = 2
 mpd-icon-font = 2
