--- a/bspwm/.config/polybar/mpc-zscroll.ini
+++ b/bspwm/.config/polybar/mpc-zscroll.ini
@@ -4,5 +4,5 @@ type = custom/script
 exec = ~/.config/polybar/scripts/mpc-zscroll.sh
 tail = true
 
-format = %{A1:mpc toggle:}%{A3:~/.config/polybar/scripts/refresh-playlist.sh:}%{A4:mpc prev:}%{A5:mpc next:}<label>%{A}%{A}%{A}%{A}
+format = %{A1:notify-send -t 1000 "$(mpc vol)":}%{A4:mpc vol +5 && notify-send -t 1000 "$(mpc vol)":}%{A5:mpc vol -5 && notify-send -t 1000 "$(mpc vol)":}<label>%{A}%{A}%{A}
 label = %output%
