--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -22,6 +22,7 @@ font-0 = Sans:size=8;2
 font-1 = Material Icons:size=8;2
 font-2 = Material Icons:size=10;2
 font-3 = Font Awesome 5 Free Solid:size=7;1
+font-4 = Siji:weight=bold:size=8;1
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -50,9 +51,8 @@ wm-restack = bspwm
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
 
-modules-left = bspwm | mpd - mpc-zscroll
+modules-left = bspwm | refresh-playlist - mpd - mpc-zscroll
 modules-right = wireless-network - network-traffic - cpu - temperature - memory - pulseaudio - date menu-power
-
 
 ;;  • ▌ ▄ ·.       ·▄▄▄▄  ▄• ▄▌▄▄▌  ▄▄▄ ..▄▄ ·
 ;;  ·██ ▐███▪▪     ██▪ ██ █▪██▌██•  ▀▄.▀·▐█ ▀.
@@ -67,6 +67,12 @@ content = "  "
 [module/|]
 type = custom/text
 content = "  │   "
+
+[module/refresh-playlist]
+type = custom/text
+content = 
+click-left = ~/.config/polybar/scripts/refresh-playlist.sh && mpc clear && mpc load playlist && mpc play
+click-right = st -c st-ncmpcpp -e ncmpcpp &
 
 include-file = ~/.config/polybar/bspwm.ini
 include-file = ~/.config/polybar/cpu.ini
