--- a/bspwm/.config/polybar/mpd.ini
+++ b/bspwm/.config/polybar/mpd.ini
@@ -22,7 +22,7 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = %{A1:st -c st-ncmpcpp -e ncmpcpp &:}<label-time>%{A}
+format-online = <icon-prev> <toggle> <icon-next> <icon-random>  <label-time>
 ;format-online-margin = ${variables.mpd-format-margin}
 
 format-offline = <label-offline>
@@ -46,29 +46,29 @@ label-offline = offline
 label-song = %artist% - %title%
 
 
-icon-play = 
-icon-play-font = 3
-;icon-play-padding = ${variables.mpd-icon-padding}
+icon-play = 
+; icon-play-font = 4
+icon-play-padding = 1
 ;icon-play-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-pause = 
-icon-pause-font = 3
-;icon-pause-padding = ${variables.mpd-icon-padding}
+icon-pause = 
+; icon-pause-font = 4
+icon-pause-padding = 1
 ;icon-pause-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-prev = 
-icon-prev-font = 3
-;icon-prev-padding = ${variables.mpd-icon-padding}
+icon-prev = 
+; icon-prev-font = 4
+icon-prev-padding = 1
 ;icon-prev-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-next = 
-icon-next-font = 3
-;icon-next-padding = ${variables.mpd-icon-padding}
+icon-next = 
+; icon-next-font = 4
+icon-next-padding = 1
 ;icon-next-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-random = 
-icon-random-font = 3
-;icon-random-padding = ${variables.mpd-icon-padding}
+icon-random = 
+; icon-random-font = 4
+icon-random-padding = 1
 ;icon-random-margin-right = ${variables.mpd-icon-margin-right}
 
 icon-seekb = seekb
@@ -80,7 +80,7 @@ icon-consume = consume
 
 ; Used to display the state of random/repeat/repeatone/single
 ; Only applies if <icon-[random|repeat|repeatone|single]> is used
-;toggle-on-foreground = ${colors.foreground-focused}
-;toggle-off-foreground = ${colors.foreground-unfocused}
+toggle-on-foreground = ${colors.foreground-focused}
+toggle-off-foreground = ${colors.foreground-unfocused}
 
 
