--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -71,8 +71,10 @@ content = "  │   "
 [module/refresh-playlist]
 type = custom/text
 content = 
-click-left = ~/.config/polybar/scripts/refresh-playlist.sh && mpc clear && mpc load playlist && mpc play
-click-right = st -c st-ncmpcpp -e ncmpcpp &
+click-left = ~/.config/polybar/scripts/refresh-playlist.sh && mpc clear && mpc load playlist && mpc random on && mpc play
+click-right = ~/.config/polybar/scripts/refresh-radio.sh && mpc clear && mpc load radio && mpc random on && mpc play
+scroll-up = mpc clear && mpc load playlist && mpc random on && mpc play
+scroll-down = mpc clear && mpc load radio && mpc random on && mpc play
 
 include-file = ~/.config/polybar/bspwm.ini
 include-file = ~/.config/polybar/cpu.ini
