--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,7 +1,7 @@
 # Tweaks
 autofit=85%
 keep-open=yes
-fullscreen=yes
+# fullscreen=yes
 cursor-autohide=500
 resume-playback=yes
 save-position-on-quit=yes
