--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,8 +1,5 @@
 # Shadow
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
 shadow-radius = 5;
 shadow-offset-x = -5;
 shadow-offset-y = -5;
@@ -21,13 +18,10 @@ shadow-exclude = [
 # shadow-exclude-reg = "x10+0+0";
 # xinerama-shadow-crop = true;
 
-# Opacity
-menu-opacity = 0.95;
 # inactive-opacity = 0.8;
 # active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 # blur-background = true;
@@ -59,9 +53,8 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = false;
 dbe = false;
-paint-on-overlay = true;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
@@ -79,7 +72,6 @@ invert-color-include = [ ];
 glx-copy-from-front = false;
 # glx-use-copysubbuffermesa = true;
 # glx-no-rebind-pixmap = true;
-glx-swap-method = "undefined";
 # glx-use-gpushader4 = true;
 # xrender-sync = true;
 # xrender-sync-fence = true;
@@ -93,20 +85,38 @@ wintypes:
 	  	opacity = 0.75;
 	  	focus = true;
 	};
+	dock = {
+		shadow = false;
+	}
+	dnd = {
+		shadow = false;
+	}
+	popup_menu = {
+		opacity = 0.95;
+	}
+	dropdown_menu = {
+		opacity = 0.95;
+	}
 };
 
 ##
 ##
 
-# "85:class_g = 'URxvt' && focused",
-# "85:class_g = 'URxvt' && !focused",
-
 opacity-rule = [
+	# "90:class_g = 'st-256color' && focused",
+	# "75:class_g = 'st-256color' && !focused",
+
 	"85:class_g = 'dmenu'",
 
-	"85:class_g = 'URxvt'",
+	"95:class_g = 'Code'",
 	"90:class_g = 'Sublime_text'",
+	"90:class_g = 'st-256color'",
 	"90:class_g = 'Thunar'",
+	"85:class_g = 'URxvt'",
 
 	"90:class_g = 'tabbed'"
 ];
+
+# New
+
+use-damage = true; # glx-swap-method = "undefined";
