file-allocation changed from none to falloc

--- a/aria2/etc/aria2.conf
+++ b/aria2/etc/aria2.conf
@@ -4,7 +4,7 @@ console-log-level=notice
 # debug (default), info, notice, warn, error
 log-level=notice
 # none, prealloc (default), falloc
-file-allocation=none
+file-allocation=falloc
 
 max-connection-per-server=16
 max-concurrent-downloads=4
