Fix aria2 error user, goup, and default download path

--- a/aria2/etc/conf.d/aria2c-env.conf
+++ b/aria2/etc/conf.d/aria2c-env.conf
@@ -1,10 +1,10 @@
 # environment parameters
 
-#ARIA2C_USER="aria2c"
-#ARIA2C_GROUP="aria2c"
-#ARIA2C_HOME="/var/share/aria2c"
+ARIA2C_USER="aztecrabbit"
+ARIA2C_GROUP="aztecrabbit"
+ARIA2C_HOME="/home/aztecrabbit"
 
 ARIA2C_CONF="/etc/aria2.conf"
 ARIA2C_SESSION="/var/share/aria2c/aria2c.session"
 
-ARIA2C_ARGS="-D --conf-path=${ARIA2C_CONF} --save-session-interval=180 --save-session=${ARIA2C_SESSION}"
+ARIA2C_ARGS="-D --conf-path=${ARIA2C_CONF} --save-session-interval=180 --save-session=${ARIA2C_SESSION} --dir ~/Downloads/Aria2"
