--- a/aria2/etc/systemd/system/aria2cd.service
+++ b/aria2/etc/systemd/system/aria2cd.service
@@ -5,9 +5,9 @@ After=dhcpcd.service
 
 [Service]
 Type=forking
-User=aria2c
-Group=aria2c
-WorkingDirectory=/var/share/aria2c
+User=aztecrabbit
+Group=aztecrabbit
+WorkingDirectory=/home/aztecrabbit
 EnvironmentFile=/etc/conf.d/aria2c-env.conf
 ExecStart=/bin/sh -c 'exec /usr/bin/aria2c ${ARIA2C_ARGS}'
 ExecReload=/usr/bin/kill -HUP $MAINPID
