Move aria2 rpc config to aria2cd service config file

--- a/aria2/etc/conf.d/aria2c-env.conf
+++ b/aria2/etc/conf.d/aria2c-env.conf
@@ -7,4 +7,4 @@ ARIA2C_HOME="/home/aztecrabbit"
 ARIA2C_CONF="/etc/aria2.conf"
 ARIA2C_SESSION="/var/share/aria2c/aria2c.session"
 
-ARIA2C_ARGS="-D --conf-path=${ARIA2C_CONF} --save-session-interval=180 --save-session=${ARIA2C_SESSION} --dir ~/Downloads/Aria2"
+ARIA2C_ARGS="-D --conf-path=${ARIA2C_CONF} --save-session-interval=180 --save-session=${ARIA2C_SESSION} --dir ~/Downloads/Aria2 --enable-rpc=true --rpc-allow-origin-all=true --rpc-listen-all=true --rpc-listen-port=6800 --rpc-secret=12345671230"
