Update and remove unused config

--- a/aria2/etc/conf.d/aria2c-env.conf
+++ b/aria2/etc/conf.d/aria2c-env.conf
@@ -1,8 +1,8 @@
 # environment parameters
 
-ARIA2C_USER="aztecrabbit"
-ARIA2C_GROUP="aztecrabbit"
-ARIA2C_HOME="/home/aztecrabbit"
+# ARIA2C_USER="aztecrabbit"
+# ARIA2C_GROUP="aztecrabbit"
+# ARIA2C_HOME="/home/aztecrabbit"
 
 ARIA2C_CONF="/etc/aria2.conf"
 ARIA2C_SESSION="/var/share/aria2c/aria2c.session"
