--- a/bspwm/.config/polybar/network-traffic.ini
+++ b/bspwm/.config/polybar/network-traffic.ini
@@ -1,6 +1,6 @@
 [module/network-traffic]
 type = custom/script
-exec = network-traffic 'enp0s29f7u4'
+exec = network-traffic enp0s29f7u4 enp0s29f0u1
 tail = true
 interval = 1
 
