--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -6,7 +6,7 @@ cursor-autohide=500
 resume-playback=yes
 save-position-on-quit=yes
 
-# local cache and stream cache
+# Local cache and stream cache
 cache=yes
 cache-secs=59
 cache-pause-wait=10
@@ -17,7 +17,7 @@ demuxer-max-bytes=10485760
 demuxer-readahead-secs=59
 demuxer-mkv-subtitle-preroll=yes
 
-# volume
+# Volume
 volume=100
 volume-max=250
 
@@ -34,8 +34,10 @@ osd-shadow-offset=1
 osd-shadow-color="#EE000000"
 osd-spacing=0.5
 osd-level=3
+osd-playing-msg="${filename}"
+osd-duration=3500
 
-# subtitle
+# Subtitle
 sub-pos=90
 sub-font=""
 sub-font-size=32
@@ -46,13 +48,12 @@ sub-shadow-offset=1
 sub-shadow-color="#EE000000"
 sub-spacing=0.5
 sub-delay=0
-sub-file-paths="--"
 
 sub-auto=fuzzy
 sub-fix-timing=no
 sub-ass-vsfilter-blur-compat=no
 
-# autoselect sub
+# Autoselect sub
 slang=id,en
 
 # Screenshot
