--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -11,16 +11,19 @@ CTRL+SHIFT+k 	add sub-pos -1
 CTRL+SHIFT+j 	add sub-pos +1
 
 # Seek
-RIGHT			seek +5
-LEFT			seek -5
-CTRL+RIGHT		seek +30
-CTRL+LEFT		seek -30
+RIGHT			osd-msg-bar seek +5
+LEFT			osd-msg-bar seek -5
+CTRL+RIGHT		osd-msg-bar seek +30
+CTRL+LEFT		osd-msg-bar seek -30
 
 # Do smaller, always exact (non-keyframe-limited), seeks with shift.
 # Don't show them on the OSD (no-osd).
 SHIFT+RIGHT 	no-osd seek +2 exact
 SHIFT+LEFT  	no-osd seek -2 exact
 
+# Show filename
+i				show-text "${filename}"
+
 # Sub
-CTRL+SHIFT+LEFT		sub-step -1
-CTRL+SHIFT+RIGHT	sub-step +1
+# CTRL+SHIFT+LEFT		sub-step -1
+# CTRL+SHIFT+RIGHT	sub-step +1
