--- a/polybar/.config/polybar/wireless-network.ini
+++ b/polybar/.config/polybar/wireless-network.ini
@@ -1,16 +1,15 @@
 [module/wireless-network]
 type = internal/network
 interface = wlp0s29f7u2
+;interface = enp0s29f7u4
 
-; Seconds to sleep between updates
-; Default: 1
 interval = 1
 
 ; Test connectivity every Nth update
 ; A value of 0 disables the feature
 ; NOTE: Experimental (needs more testing)
 ; Default: 0
-;ping-interval = 3
+ping-interval = 0
 
 ; Accumulate values from all interfaces
 ; when querying for up/downspeed rate
@@ -27,14 +26,10 @@ unknown-as-up = false
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <label-connected>
-;format-connected-suffix = ${variables.wireless-network-format-suffix}
-;format-connected-suffix-margin-left = ${variables.wireless-network-format-suffix-margin-left}
-;format-connected-margin = ${variables.wireless-network-format-margin}
 
 ; Available tags:
 ;   <label-disconnected> (default)
-; format-disconnected = <label-disconnected>
-; format-disconnected-margin = ${variables.wireless-network-margin}
+format-disconnected = <label-disconnected>
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -52,11 +47,9 @@ format-connected = <label-connected>
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 
-; Default: %ifname% %local_ip%
 label-connected = %downspeed%  %upspeed%  %signal%%  %essid%  -
 
-; Default: (none)
-;label-disconnected =
+label-disconnected =
 
 ; Default: (none)
 ;label-packetloss = %essid%
