--- a/polybar/.config/polybar/bspwm.ini
+++ b/polybar/.config/polybar/bspwm.ini
@@ -23,13 +23,6 @@ ws-icon-3 = 3;
 ws-icon-4 = 4;
 ws-icon-default = 
 
-; ws-icon-0 = 0
-; ws-icon-1 = 1;%{T2}ﮊ%{T-}
-; ws-icon-2 = 2;%{T2}%{T-}
-; ws-icon-3 = 3;%{T2}%{T-}
-; ws-icon-4 = 4;%{T2}%{T-}
-; ws-icon-default = %{T2}%{T-}
-
 ; Available tags:
 ;   <label-monitor>
 ;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
@@ -111,5 +104,5 @@ label-empty-foreground = #444444
 ;label-marked = M
 
 ; Separator in between workspaces
-;label-separator =
-;label-separator-padding = 0
+label-separator =
+label-separator-padding = 0
