--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -47,13 +47,13 @@ tray-detached = false
 wm-name = bspwm
 wm-restack = bspwm
 
-scroll-up = bspwm-desknext
-scroll-down = bspwm-deskprev
+scroll-up = bspwm-deskprev
+scroll-down = bspwm-desknext
 
 enable-ipc = true
 
 modules-left = bspwm | refresh-playlist - mpd - mpc-zscroll
-modules-right = wireless-network - cpu - temperature - memory - pulseaudio - date menu-power
+modules-right = wireless-network - network-traffic - cpu - temperature - memory - pulseaudio - date menu-power
 
 
 ;; Modules
@@ -81,7 +81,7 @@ include-file = ~/.config/polybar/memory.ini
 include-file = ~/.config/polybar/menu-power.ini
 include-file = ~/.config/polybar/mpc-zscroll.ini
 include-file = ~/.config/polybar/mpd.ini
-; include-file = ~/.config/polybar/network-traffic.ini
+include-file = ~/.config/polybar/network-traffic.ini
 include-file = ~/.config/polybar/pulseaudio.ini
 include-file = ~/.config/polybar/refresh-playlist.ini
 include-file = ~/.config/polybar/temperature.ini
