--- a/polybar/.config/polybar/mpc-zscroll.ini
+++ b/polybar/.config/polybar/mpc-zscroll.ini
@@ -4,5 +4,5 @@ type = custom/script
 exec = ~/.config/polybar/scripts/mpc-zscroll.sh
 tail = true
 
-format = %{A1:notify-send -t 1000 "$(mpc vol)":}%{A4:mpc vol +5 && notify-send -t 1000 "$(mpc vol)":}%{A5:mpc vol -5 && notify-send -t 1000 "$(mpc vol)":}<label>%{A}%{A}%{A}
+format = %{A1:notify-send -t 1000 "$(mpc vol)":}%{A3:mpc stop:}%{A4:mpc vol +5 && notify-send -t 1000 "$(mpc vol)":}%{A5:mpc vol -5 && notify-send -t 1000 "$(mpc vol)":}<label>%{A}%{A}%{A}%{A}
 label = %output%
