mpd: Reformat config and add default config for unused plugin

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -1,9 +1,9 @@
 music_directory         "~/Music"
 playlist_directory      "~/.local/share/mpd/playlists"
 db_file                 "~/.local/share/mpd/database"
-log_file                "~/.local/share/mpd/mpd.log"
-pid_file                "~/.local/share/mpd/mpd.pid"
-state_file              "~/.local/share/mpd/mpd.state"
+log_file                "~/.local/share/mpd/log"
+pid_file                "~/.local/share/mpd/pid"
+state_file              "~/.local/share/mpd/state"
 sticker_file            "~/.local/share/mpd/sticker.sql"
 
 
@@ -23,14 +23,30 @@ input {
     plugin              "curl"
 }
 
+input {
+    enabled             "no"
+    plugin              "tidal"
+}
+
+input {
+    enabled             "no"
+    plugin              "qobuz"
+}
+
 audio_output {
     type                "pulse"
-    name                "pulse audio"
+    name                "Pulse Audio"
 }
 
 audio_output {
     type                "fifo"
-    name                "my_fifo"
+    name                "Fifo"
     path                "/tmp/mpd.fifo"
     format              "44100:16:2"
+    buffer_time         "100000"
+}
+
+decoder {
+    enabled             "no"
+    plugin              "wildmidi"
 }
