mpv: Add shaders shortcut and commented shaders config, remove unused youtube-dl streaming config

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -64,13 +64,7 @@ screenshot-jpeg-quality=100
 #screenshot-directory="%UserProfile%\Pictures\Screenshots"
 screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
 
-# YouTube DL
-#ytdl-format=bestvideo[height<=?720][vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best[height<=?720]
-ytdl-format=bestvideo[height<=?480][vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best[height<=?480]
-ytdl-raw-options=all-subs=
-
-[720p]
-ytdl-format=bestvideo[height<=?720][vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best[height<=?720]
-
-[hd]
-ytdl-format=bestvideo[vcodec!=av01.0.05M.08][vcodec!=vp9]+bestaudio/best
+# # Shaders
+# profile=gpu-hq
+# gpu-api=opengl
+# hwdec=dxva2-copy
