--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -71,10 +71,9 @@ visualizer_data_source = /tmp/mpd.fifo
 #
 # Available values: spectrum, wave, wave_filled, ellipse.
 #
-visualizer_type = ellipse
+visualizer_type = spectrum
 
 # ●▮
-# +|
 visualizer_look = "●▮"
 
 #visualizer_color = blue, cyan, green, yellow, magenta, red
@@ -318,7 +317,7 @@ progressbar_look = ━━━
 
 # Available values: classic, alternative.
 #
-user_interface = classic
+user_interface = alternative
 
 #data_fetching_delay = yes
 
@@ -336,7 +335,7 @@ user_interface = classic
 
 header_visibility = no
 
-statusbar_visibility = no
+#statusbar_visibility = yes
 
 titles_visibility = no
 
@@ -516,6 +515,6 @@ player_state_color = default:b
 
 #alternative_ui_separator_color = black:b
 
-#window_border_color = green
+window_border_color = white
 
-#active_window_border = red
+active_window_border = red
