--- a/polybar/.config/polybar/menu-power.ini
+++ b/polybar/.config/polybar/menu-power.ini
@@ -13,17 +13,21 @@ expand-right = false
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
 
-menu-0-0 = "log off"
-menu-0-0-exec = bspc quit
+menu-0-0 = "Reload"
+menu-0-0-exec = bspc wm -r
 menu-0-0-margin = 1
 
-menu-0-1 = "restart"
-menu-0-1-exec = systemctl reboot
+menu-0-1 = "Log off"
+menu-0-1-exec = bspc quit
 menu-0-1-margin = 1
 
-menu-0-2 = "shutdown"
-menu-0-2-exec = systemctl poweroff
+menu-0-2 = "Restart"
+menu-0-2-exec = systemctl reboot
 menu-0-2-margin = 1
+
+menu-0-3 = "Shutdown"
+menu-0-3-exec = systemctl poweroff
+menu-0-3-margin = 1
 
 ; Available tags:
 ;   <label-toggle> (default) - gets replaced with <label-(open|close)>
