polybar: Change mpd offline label

--- a/polybar/.config/polybar/mpd.ini
+++ b/polybar/.config/polybar/mpd.ini
@@ -34,7 +34,7 @@ format-offline = <label-offline>
 
 ; %elapsed% %total%
 label-time = %elapsed% / %total%
-label-offline = offline
+label-offline = " MPD Not Running"
 
 ; Available tokens:
 ;   %artist%
