mpv: Change button speed value

--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -21,6 +21,10 @@ CTRL+LEFT		osd-msg-bar seek -30
 SHIFT+RIGHT 	no-osd seek +2 exact
 SHIFT+LEFT  	no-osd seek -2 exact
 
+# Speed
+] 				add speed +0.05
+[ 				add speed -0.05
+
 # Show filename
 i				show-text "${filename}"
 
