polybar: Rewrite for arch linux

--- a/polybar/.config/polybar/mpd.ini
+++ b/polybar/.config/polybar/mpd.ini
@@ -46,27 +46,32 @@ label-offline = " MPD Not Running"
 label-song = %artist% - %title%
 
 
-icon-play = 
+;icon-play = 
+icon-play = "p"
 ; icon-play-font = 4
 icon-play-padding = 1
 ;icon-play-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-pause = 
+;icon-pause = 
+icon-pause = "P"
 ; icon-pause-font = 4
 icon-pause-padding = 1
 ;icon-pause-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-prev = 
+;icon-prev = 
+icon-prev = "P"
 ; icon-prev-font = 4
 icon-prev-padding = 1
 ;icon-prev-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-next = 
+;icon-next = 
+icon-next = "N"
 ; icon-next-font = 4
 icon-next-padding = 1
 ;icon-next-margin-right = ${variables.mpd-icon-margin-right}
 
-icon-random = 
+;icon-random = 
+icon-random = "R"
 ; icon-random-font = 4
 icon-random-padding = 1
 ;icon-random-margin-right = ${variables.mpd-icon-margin-right}
@@ -82,5 +87,3 @@ icon-consume = consume
 ; Only applies if <icon-[random|repeat|repeatone|single]> is used
 toggle-on-foreground = ${colors.foreground-focused}
 toggle-off-foreground = ${colors.foreground-unfocused}
-
-
