--- a/polybar/.config/polybar/refresh-playlist.ini
+++ b/polybar/.config/polybar/refresh-playlist.ini
@@ -1,6 +1,7 @@
 [module/refresh-playlist]
 type = custom/text
-content = 
+;content = ""
+content = "R"
 click-left = ~/.config/polybar/scripts/refresh-music.sh && mpc clear && mpc load music && mpc random on && mpc play
 click-right = ~/.config/polybar/scripts/refresh-radio.sh && mpc clear && mpc load radio && mpc random on && mpc play
 scroll-up = mpc clear && mpc load music && mpc random on && mpc play
