--- a/polybar/.config/polybar/wireless-network.ini
+++ b/polybar/.config/polybar/wireless-network.ini
@@ -1,7 +1,6 @@
 [module/wireless-network]
 type = internal/network
-interface = wlp0s29f7u2
-;interface = enp0s29f7u4
+interface = wlan0
 
 interval = 1
 
