--- a/polybar/.config/polybar/bspwm.ini
+++ b/polybar/.config/polybar/bspwm.ini
@@ -15,13 +15,21 @@ enable-click = true
 enable-scroll = true
 reverse-scroll = true
 
+# ; Icons
+# ws-icon-0 = 0
+# ws-icon-1 = 1;
+# ws-icon-2 = 2;
+# ws-icon-3 = 3;
+# ws-icon-4 = 4;
+# ws-icon-default = 
+
 ; Icons
-ws-icon-0 = 0
-ws-icon-1 = 1;
-ws-icon-2 = 2;
-ws-icon-3 = 3;
-ws-icon-4 = 4;
-ws-icon-default = 
+ws-icon-0 = "0"
+ws-icon-1 = "1;"
+ws-icon-2 = "2;"
+ws-icon-3 = "3;"
+ws-icon-4 = "4;"
+ws-icon-default = ""
 
 ; Available tags:
 ;   <label-monitor>
