--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -18,9 +18,9 @@ border-bottom = #1f1f1f
 [bar/top]
 bottom = false
 
-font-0 = Sans:size=8;2
+font-0 = DejaVu Sans:size=8;2
 font-1 = Material Icons:size=8;2
-font-2 = Font Awesome 5 Free Solid:size=7;1
+font-2 = Font Awesome 5 Free:style=Solid:size=7;1
 font-3 = Siji:weight=bold:size=8;1
 
 background = ${colors.background}
@@ -53,7 +53,7 @@ scroll-down = bspwm-desknext
 enable-ipc = true
 
 modules-left = bspwm | refresh-playlist - mpd - mpc-zscroll
-modules-right = wireless-network - network-traffic - cpu - temperature - memory - pulseaudio - date menu-power
+modules-right = wireless-network - cpu - temperature - memory - pulseaudio - date menu-power
 
 
 ;; Modules
