makepkg: Remove user agent

--- a/makepkg/etc/makepkg.conf
+++ b/makepkg/etc/makepkg.conf
@@ -15,9 +15,9 @@
 #           'rsync::/usr/bin/rsync --no-motd -z %u %o'
 #           'scp::/usr/bin/scp -C %u %o')
 
-DLAGENTS=('ftp::/usr/bin/aria2c --conf-path=/etc/aria2.conf --user-agent=Wget %u -o %o'
-          'http::/usr/bin/aria2c --conf-path=/etc/aria2.conf --user-agent=Wget %u -o %o'
-          'https::/usr/bin/aria2c --conf-path=/etc/aria2.conf --user-agent=Wget %u -o %o'
+DLAGENTS=('ftp::/usr/bin/aria2c --conf-path=/etc/aria2.conf %u -o %o'
+          'http::/usr/bin/aria2c --conf-path=/etc/aria2.conf %u -o %o'
+          'https::/usr/bin/aria2c --conf-path=/etc/aria2.conf %u -o %o'
           'rsync::/usr/bin/rsync --no-motd -z %u %o'
           'scp::/usr/bin/scp -C %u %o')
 
