pacman: Rewrite for arch linux

--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -11,20 +11,17 @@
 # If you wish to use different paths, uncomment and update the paths.
 #RootDir     = /
 #DBPath      = /var/lib/pacman/
-CacheDir = /var/cache/pacman/pkg/
+#CacheDir    = /var/cache/pacman/pkg/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
 #HookDir     = /etc/pacman.d/hooks/
-HoldPkg      = pacman glibc manjaro-system
-# If upgrades are available for these packages they will be asked for first
-SyncFirst    = manjaro-system archlinux-keyring manjaro-keyring
-#XferCommand = /usr/bin/curl -C - -f %u > %o
+HoldPkg     = pacman glibc
+#XferCommand = /usr/bin/curl -L -C - -f -o %o %u
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
-#UseDelta    = 0.7
 Architecture = auto
 
-IgnorePkg   = firefox gimp pygtk megasync wps-office teamviewer postman-bin
+# Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
 #IgnoreGroup =
 
@@ -35,9 +32,8 @@ IgnorePkg   = firefox gimp pygtk megasync wps-office teamviewer postman-bin
 #UseSyslog
 Color
 #TotalDownload
-# We cannot check disk space from within a chroot environment
 CheckSpace
-#VerbosePkgLists
+# VerbosePkgLists
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -46,8 +42,8 @@ LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
 # NOTE: You must run `pacman-key --init` before first using pacman; the local
-# keyring can then be populated with the keys of all official Manjaro Linux
-# packagers with `pacman-key --populate archlinux manjaro`.
+# keyring can then be populated with the keys of all official Arch Linux
+# packagers with `pacman-key --populate archlinux`.
 
 #
 # REPOSITORIES
@@ -72,6 +68,9 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
+#[testing]
+#Include = /etc/pacman.d/mirrorlist
+
 [core]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
@@ -80,6 +79,9 @@ Include = /etc/pacman.d/mirrorlist
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
+#[community-testing]
+#Include = /etc/pacman.d/mirrorlist
+
 [community]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
@@ -87,13 +89,14 @@ Include = /etc/pacman.d/mirrorlist
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
-[multilib]
-SigLevel = PackageRequired
-Include = /etc/pacman.d/mirrorlist
+#[multilib-testing]
+#Include = /etc/pacman.d/mirrorlist
+
+#[multilib]
+#Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
