mpv: Add more user scripts and shaders

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -68,3 +68,6 @@ screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
 # profile=gpu-hq
 # gpu-api=opengl
 # hwdec=dxva2-copy
+
+# YouTube DL
+ytdl-format="best[height=480]"
