--- a/youtube-dl/.config/youtube-dl/config
+++ b/youtube-dl/.config/youtube-dl/config
@@ -1,4 +1,4 @@
---format "best[height=720]"
+--format "bestvideo[height=720][vcodec=?vp9]+bestaudio/best[height=720]"
 --output "%(title)s.%(ext)s"
 
 # --write-sub
